--- a/performance/buildSrc/build.gradle
+++ b/performance/buildSrc/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compileOnly gradleApi()
     implementation "org.jetbrains.kotlin:kotlin-gradle-plugin"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-common:$kotlinVersion"
+    compile group: 'com.ullink.slack', name: 'simpleslackapi', version: '0.6.0'
 }
 
 sourceSets.main.kotlin.srcDirs = ["src", "$projectDir/../../tools/benchmarks/shared/src"]
