--- a/tools/benchmarksAnalyzer/build.gradle
+++ b/tools/benchmarksAnalyzer/build.gradle
@@ -72,7 +72,6 @@ kotlin {
 
     targets {
         fromPreset(presets.jvm, 'jvm') {
-            def mainOutput = compilations.main.output
             compilations.all {
                 tasks[compileKotlinTaskName].kotlinOptions {
                     jvmTarget = '1.8'
@@ -86,9 +85,9 @@ kotlin {
         fromPreset(presets.macosX64, 'macos')
 
         configure([windows, linux, macos]) {
-            compilations.main.outputKinds('EXECUTABLE')
-            compilations.main.extraOpts '-opt'
-            compilations.main.buildTypes = [RELEASE]
+            binaries {
+                executable('benchmarksAnalyzer', [RELEASE])
+            }
         }
     }
 }
