--- a/performance/gradle.properties
+++ b/performance/gradle.properties
@@ -10,3 +10,4 @@ nativeJson = nativeReport.json
 jvmJson = jvmReport.json
 analyzerTool = benchmarksAnalyzer
 analyzerToolDirectory = tools/benchmarksAnalyzer/build/bin
+outputReport = ../report/report.html
